# vinted-observer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py  logger.py
src/message_bus/: message_bus.py
src/migrations/: 001_create_searches_table.py  002_create_search_listings_table.py  003_create_search_listings_index.py  004_replace_search_listings_index.py
src/monitoring/: error_parser.py  monitor.py
src/repository/: migrations.py  repository.py
src/resources/: agents.json
src/search_processor/: search_processor.py  search_task.py
src/telegram_bot/: bot.py
src/vinted_network_client/: vinted_network_client.py
tests/: conftest.py
tests/test_logger/: conftest.py  helpers.py  test_setup_logging.py
tests/test_message_bus/: conftest.py  test_message_bus.py
tests/test_monitoring/: conftest.py  test_error_parser.py  test_monitor.py
tests/test_repository/: conftest.py  test_migrations.py  test_repository.py
tests/test_search_processor/: conftest.py  helpers.py  test_search_processor.py  test_search_task.py
tests/test_telegram_bot/: conftest.py  helpers.py  test_bot.py  test_keyboard_builder.py  test_message_builder.py  test_my_searches_router.py  test_new_search_router.py  test_start_router.py  test_start_searching_router.py  test_status_router.py  test_stop_searching_router.py  test_validators.py
tests/test_vinted_network_client/: conftest.py  helpers.py  test_proxy_manager.py  test_vinted_error.py  test_vinted_high_resolution.py  test_vinted_image.py  test_vinted_item.py  (+6 more)
(+55 files in other folders)
